Add Github OAuth tapi masih pakai Passport.JS

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,11 @@
     <title>Google OAuth2</title>
 </head>
 <body>
-    <h1>Google OAuth 2 with Passport.JS</h1> 
-    <a href="/auth/google">Login with Google</a>   
+    <h1>OAuth 2.0</h1>
+    <h2>Google with Passport.JS</h2>
+    <a href="/auth/google">Login with Google</a>
+    
+    <h2>Github</h2>
+    <a href="/auth/github">Login with Github</a>
 </body>
 </html>
