--- a/client/index.html
+++ b/client/index.html
@@ -1,17 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
+  <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google OAuth2</title>
-</head>
-<body>
-    <h1>OAuth 2.0</h1>
-    <h2>Google with Passport.JS</h2>
-    <a href="/auth/google">Login with Google</a>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     
-    <h2>Github</h2>
-    <a href="/auth/github">Login with Github</a>
-</body>
+    <!-- My Style -->
+    <link href="style.css" rel="stylesheet">
+
+    <!-- Font Google -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <title>Google OAuth2</title>
+  </head>
+  <body>
+    <section class="login d-flex">
+        <div class="login-left w-50 h-100">
+          <div class="row justify-content-center align-items-center h-100">
+            <div class="col-8">
+              <div class="header">
+                <h1>OAuth 2.0</h1>
+                <p>Waktunya Belajar OAuth 2.0 Semangat!!</p>
+            </div>
+            <div class="login-form">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email">
+
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="email" placeholder="Enter your password">
+                <a href="#" class="text-decoration-none text-center">Forgot Password</a>
+
+                <button type="submit" class="signin">Login</button>
+
+                <!--
+                <button type="submit"  class="signin-google" href="/auth/google">
+                  Login with Google</button>
+                <button type="submit" class="signin-github" href="/auth/github">
+                  Login In with Github
+                </button>
+                -->
+
+                <a href="/auth/google" class="text text-center">Login with Google</a>
+                <a href="/auth/github" class="text text-center">Login with Github</a>
+                <a href="/auth/idcloudhost" class="text text-center">Login with IDCloudHost</a>
+
+                <span class="d-inline"> Don't have an account? <a href="#" class="signup d-inline text-decoration-none"> Signup for free</a></span>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="login-right w-50 h-1">
+
+        </div>
+    </section>
+    
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+  </body>
 </html>
